# scos-tekrsa

./: .gitignore  .pre-commit-config.yaml  GitHubRepoPublicReleaseApproval.md  LICENSE.md  README.md  RSA_API.py  RSA_API_redux.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.py  testbed.py  tox.ini  wipREADME.md
.github/workflows/: auto-update-parent-image.yaml  bandit.yaml  bandit.yml  build-docker-image.yaml  codeql.yaml  docker-image-updater.yaml  test.yaml  tox.yaml  unit-tests.yaml
Ctypes API/: README.md  RSA_API.py  RSA_API_old.py  streamtest.py  testbed.py
CtypesAPI/: RSA_API.py  SDR_Error.py  api_test.py  rsa_api.py  testbed.py
Cython API/: README.md  RSA_API.pyx  RSA_API_h.pxd  rsa_api.c  rsa_api.pyx  rsa_api_h.pxd  setup.py
CythonAPI/: README.md  cython_example.py
Old API/: RSA_API.py
USRP_TX/: chirp.py
docker/: Dockerfile  Dockerfile-test
scos-tekrsa/configs/actions/: test_action.yml
scos-tekrsa/discover/: __init__.py
scos-tekrsa/hardware/: tekrsa_radio.py
scos_tekrsa/: settings.py
scos_tekrsa/actions/: enable_antenna.py  enable_noise_diode_off.py  enable_noise_diode_on.py
scos_tekrsa/configs/: sensor_calibration.json.example  sensor_calibration_example.json  sigan_calibration.json.example  sigan_calibration_example.json
scos_tekrsa/configs/actions/: acquire_iq_700MHz_ATT_DL.yml  acquire_iq_700MHz_ATT_UL.yml  acquire_iq_700MHz_T-Mobile_DL.yml  acquire_iq_700MHz_T-Mobile_UL.yml  acquire_iq_700MHz_Verizon_DL.yml  acquire_iq_700MHz_Verizon_UL.yml  acquire_m4s_700MHz_ATT_DL.yml  acquire_m4s_700MHz_ATT_UL.yml  acquire_m4s_700MHz_T-Mobile_DL.yml  acquire_m4s_700MHz_T-Mobile_UL.yml  acquire_m4s_700MHz_Verizon_DL.yml  acquire_m4s_700MHz_Verizon_UL.yml
scos_tekrsa/configs/actions-300/: acquire_iq_700MHz_ATT_DL.yml  acquire_iq_700MHz_ATT_UL.yml  acquire_iq_700MHz_T-Mobile_DL.yml  acquire_iq_700MHz_T-Mobile_UL.yml  acquire_iq_700MHz_Verizon_DL.yml  acquire_iq_700MHz_Verizon_UL.yml  acquire_m4s_700MHz_T-Mobile_DL.yml  acquire_m4s_700MHz_T-Mobile_UL.yml  acquire_m4s_700MHz_Verizon_DL.yml
scos_tekrsa/configs/actions-500-600/: 3555_M4  3555_M4.yml  3565_IQ.yml  3565_M4.yml  3575_M4.yml  3585_IQ.yml  3585_M4.yml  3595_M4.yml  3605_IQ.yml  3615_IQ.yml  3615_M4.yml  3625_IQ.yml  3625_M4.yml  3645_IQ.yml  3655_IQ.yml  3655_M4.yml  3675_IQ.yml  3675_M4.yml  3685_IQ.yml  3685_M4.yml  3695_IQ.yml  3695_M4.yml  acquire_iq_700MHz_ATT_DL.yml  acquire_iq_700MHz_ATT_UL.yml  acquire_iq_700MHz_T-Mobile_DL.yml  acquire_iq_700MHz_T-Mobile_UL.yml  acquire_iq_700MHz_Verizon_DL.yml  acquire_iq_700MHz_Verizon_UL.yml  acquire_m4s_700MHz_ATT_DL.yml  acquire_m4s_700MHz_ATT_UL.yml  acquire_m4s_700MHz_T-Mobile_DL.yml  acquire_m4s_700MHz_T-Mobile_UL.yml  acquire_m4s_700MHz_Verizon_DL.yml  acquire_m4s_700MHz_Verizon_UL.yml  y_factor_cal_3550-3700.yml  y_factor_cal_3550-3700_iir.yml  y_factor_cal_3555.yml  y_factor_cal_3555_iir.yml  y_factor_cal_Verizon_UL  y_factor_cal_Verizon_UL.yml
scos_tekrsa/discover/: __init__.py
scos_tekrsa/hardware/: __init__.py  calibration.py  rsa306b_radio.py  rsa_api.py  tekrsa_radio.py  tekrsa_sigan.py
scos_tekrsa/hardware/api_wrap/: README.md  old_rsa306b_api.py  old_test_old_rsa306b_api.py  old_test_rsa306b_api.py  rsa306b_api.py  rsa306b_api_class.py  rsa306b_api_test.py  rsa_api.py  test_rsa306b_api.py  test_rsa_api.py
scos_tekrsa/hardware/driver/: rsa_api.py
scos_tekrsa/hardware/mocks/: rsa_block.py
scos_tekrsa/hardware/tests/: mock_306b_api.py  old_test_calibration.py  test_calibration.py  test_rsa306b.py  test_rsa306b_radio.py  test_rsa_api.py  test_tekrsa.py
scos_tekrsa/hardware/tests/resources/: utils.py
scos_tekrsa/tests/: test_calibration.py
src/scos_tekrsa/: __init__.py  settings.py
src/scos_tekrsa/configs/: sensor_calibration_example.json  sigan_calibration_example.json
src/scos_tekrsa/configs/actions-300/: acquire_iq_700MHz_ATT_DL.yml  acquire_iq_700MHz_ATT_UL.yml  acquire_iq_700MHz_T-Mobile_DL.yml  acquire_iq_700MHz_T-Mobile_UL.yml  acquire_iq_700MHz_Verizon_DL.yml  acquire_iq_700MHz_Verizon_UL.yml  acquire_m4s_700MHz_ATT_DL.yml  acquire_m4s_700MHz_ATT_UL.yml  acquire_m4s_700MHz_T-Mobile_DL.yml  acquire_m4s_700MHz_T-Mobile_UL.yml  acquire_m4s_700MHz_Verizon_DL.yml  acquire_m4s_700MHz_Verizon_UL.yml
src/scos_tekrsa/configs/actions-500-600/: 3550-3650_Cal.yml  3550-3650_Cal_IIR.yml  3550-3650_DataProduct.yml  3550-3650_IQ.yml  3550-3700_Cal.yml  3550-3700_Cal_IIR.yml  3550-3700_DataProduct.yml  3550-3700_IQ.yml  3555_Cal.yml  3555_Cal_IIR.yml  3555_Cal_List_test.yml  3555_DataProduct.yml  3555_IQ.yml  3555_M4.yml  3565_Cal_IIR.yml  3565_DataProduct.yml  3565_IQ.yml  3565_M4.yml  3575_Cal_IIR.yml  3575_DataProduct.yml  3575_IQ.yml  3575_M4.yml  3585_Cal_IIR.yml  3585_DataProduct.yml  3585_IQ.yml  3585_M4.yml  3595_Cal_IIR.yml  3595_DataProduct.yml  3595_IQ.yml  3595_M4.yml  3605_Cal_IIR.yml  3605_DataProduct.yml  3605_IQ.yml  3605_M4.yml  3615_Cal_IIR.yml  3615_DataProduct.yml  3615_IQ.yml  3615_M4.yml  3625_Cal_IIR.yml  3625_DataProduct.yml  (+120 more)
src/scos_tekrsa/configs/test/: test_SEA_CBRS_Measure_Baseline.yml  test_multi_frequency_iq_action.yml  test_single_frequency_iq_action.yml  test_single_frequency_m4s_action.yml  test_survey_iq_action.yml  test_survey_iq_action_sr56.yml
src/scos_tekrsa/discover/: __init__.py
src/scos_tekrsa/hardware/: __init__.py  tekrsa_constants.py  tekrsa_sigan.py
src/scos_tekrsa/hardware/mocks/: rsa_block.py
tests/: test_calibration.py  test_tekrsa_sigan.py
