[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scos_tekrsa"
dynamic = ["version"]
description = "Plugin for SCOS Sensor which adds support for Tektronix RSA-series spectrum analyzers"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE.md" }

authors = [
    { name = "The Institute for Telecommunication Sciences" },
    { name="Anthony Romaniello", email="aromaniello@ntia.gov"}
]

keywords = [
    "scos", "tektronix", "rsa", "sdr", "spectrum-analyzer", "spectrum",
    "analyzer", "spectrum analyzer", "usb", "scos-sensor", "scos sensor",
    "spectrum monitoring", "monitoring", "spectrum management", "docker",
    "linux", "software defined radio", "radio"
]

classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Telecommunications Industry",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Environment :: Plugins",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "tekrsa-api-wrap>=1.2.1,<2.0",
    # Impossible to add SCOS Actions while not on PyPi
]

[project.optional-dependencies]
dev = [
    "environs>=9.5.0,<10.0",
    "hatchling>=1.6.0,<2.0",
    "pre-commit>=2.20.0,<3.0",
    "pytest>=7.1.2,<8.0",
    "pytest-cov>=3.0.0,<4.0",
    "twine>=4.0.1,<5.0"
]

[project.urls]
"Repository" = "https://github.com/NTIA/scos-tekrsa"
"Bug Tracker" = "https://github.com/NTIA/scos-tekrsa/issues"
"SCOS Sensor" = "https://github.com/NTIA/scos-sensor"
"NTIA GitHub" = "https://github.com/NTIA"
"ITS Website" = "https://its.ntia.gov"
"Tektronix Website" = "https://www.tek.com/en"

[tool.hatch.version]
path = "src/scos_tekrsa/__about__.py"

[tool.hatch.build]
skip-excluded-dirs = true

[tool.hatch.build.targets.wheel]
packages = ["src/scos_tekrsa"]

[tool.hatch.build.targets.sdist]
