[build-system]
requires = ["flit_core >=3.2,<4.0"]
build-backend = "flit_core.buildapi"

[project]
name = "scos-tekrsa"
dynamic = ["version", "description"]
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE.md" }

authors = [
    { name = "The Institute for Telecommunication Sciences" },
]

maintainers = [
    { name="Anthony Romaniello", email="aromaniello@ntia.gov"},
]

keywords = [
    "SCOS", "Tektronix", "RSA", "SDR", "spectrum", "analyzer",
    "sensor", "scos-sensor", "radio", "monitoring", "remote",
    "distributed", "sensing", "NTIA", "ITS", "telecommunications",
]

classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Telecommunications Industry",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Environment :: Plugins",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "tekrsa-api-wrap>=1.2.3",
    "scos_actions @ https://github.com/NTIA/scos-actions/archive/refs/heads/nasctn-sea.zip",
]

[project.optional-dependencies]
dev = [
    "environs>=9.5.0",
    "flit>=3.4,<4",
    "pre-commit>=2.20.0",
    "pytest>=7.1.2",
    "pytest-cov>=3.0.0",
]

[project.urls]
"Repository" = "https://github.com/NTIA/scos-tekrsa"
"Bug Tracker" = "https://github.com/NTIA/scos-tekrsa/issues"
"SCOS Sensor" = "https://github.com/NTIA/scos-sensor"
"NTIA GitHub" = "https://github.com/NTIA"
"ITS Website" = "https://its.ntia.gov"
"Tektronix Website" = "https://www.tek.com/en"

[tool.flit.module]
name = "scos_tekrsa"
