[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scos-tekrsa"
dynamic = ["version"]
description = "Plugin for SCOS Sensor which adds support for Tektronix RSA-series spectrum analyzers"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE.md" }

authors = [
    { name = "The Institute for Telecommunication Sciences" },
]

maintainers = [
    { name="Anthony Romaniello", email="aromaniello@ntia.gov"},
]

keywords = [
    "SCOS", "Tektronix", "RSA", "SDR", "spectrum", "analyzer",
    "sensor", "scos-sensor", "radio", "monitoring", "remote",
    "distributed", "sensing", "NTIA", "ITS", "telecommunications",
]

classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Telecommunications Industry",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Environment :: Plugins",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "environs>=9.5.0",
    "tekrsa-api-wrap>=1.3.1",
    "scos_actions @ git+https://github.com/NTIA/scos-actions@6.1.0",
]

[project.optional-dependencies]
tests = [
    "pytest>=7.2.1",
    "pytest-cov>=4.0.0",
    "tox>=4.4.4",
]

dev = [
    "hatchling>=1.12.2",
    "pre-commit>=3.0.2",
    "scos-tekrsa[tests]",
]

[project.urls]
"Repository" = "https://github.com/NTIA/scos-tekrsa"
"Bug Tracker" = "https://github.com/NTIA/scos-tekrsa/issues"
"SCOS Sensor" = "https://github.com/NTIA/scos-sensor"
"NTIA GitHub" = "https://github.com/NTIA"
"ITS Website" = "https://its.ntia.gov"
"Tektronix Website" = "https://www.tek.com/en"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "src/scos_tekrsa/__init__.py"
